updated using position

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My Learning</p>
+            <!-- <p>My Learning</p> -->
+             <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>You didn't purchase anything yet</p>
+                </div>
+             </div>
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
@@ -45,8 +51,14 @@
         <p>Marketing</p>
     </div>
     <!-- sale-image -->
+
     <div class="images">
         <img src="./images/sale-image.jpg" alt="Sale Image">
+        <div class="image__offer">
+            <h2>Udemy Flash Sale! 24 hours to save</h2>
+            <p>Get the top course for just ₹ 499</p>
+            <p>Just one day to save but a life time to learn</p>
+        </div>
     </div>
     <!-- Recommendation -->
     <div class="recommended">
